@@ -1,0 +1,19 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>set</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    </head>
+    <body>
+    	
+    	<?php  $this->data[age] =  2013 - 1985; ?>
+    	
+    	2013,My age is:<?php echo wudimei_toString( @$this->data['age']); ?>   <br />
+    	
+		<?php  $this->data[age] =  2014 - 1985; ?>
+		2014,My age is:<?php echo wudimei_toString( @$this->data['age']); ?> <br />
+		
+		<?php  $this->data[age] =  @$this->data['age'] + 1; ?>
+		2015,My age is:<?php echo wudimei_toString( @$this->data['age']); ?>
+    </body>
+</html>
